set up paper.js

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 
-
+  <canvas id="paperCanvas" resize></canvas>
 
   <script src="js/vendor/jquery-2.1.1.min.js"></script>
+  <script src="js/vendor/paper-full.js"></script>
+
+  <script type="text/paperscript" src="js/paperCanvas.js" canvas="paperCanvas">></script>
   <script src="js/main.js"></script>
 </body>
 </html>
