--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+  <button id="save-btn">SAVE</button>
+
   <canvas id="paperCanvas" resize></canvas>
 
   <script src="js/vendor/jquery-2.1.1.min.js"></script>
