add save to file

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,14 @@
 
   <button id="save-btn">SAVE</button>
 
-  <canvas id="paperCanvas" resize></canvas>
+  <canvas id="paperCanvas" width="594" height="420"></canvas>
 
   <script src="js/vendor/jquery-2.1.1.min.js"></script>
   <script src="js/vendor/paper-full.js"></script>
+  <script src="js/vendor/FileSaver.js"></script>
+
+  <script src="js/main.js"></script>
 
   <script type="text/paperscript" src="js/paperCanvas.js" canvas="paperCanvas">></script>
-  <script src="js/main.js"></script>
 </body>
 </html>
