Add text boxes for names

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
 
   <button id="save-btn">SAVE</button>
 
+  <input type="text" id="name1" class="name" maxlength="10" size="10">
+  <input type="text" id="name2" class="name" maxlength="10" size="10">
+  <input type="text" id="name3" class="name" maxlength="10" size="10">
+  <input type="text" id="name4" class="name" maxlength="10" size="10">
+  <input type="text" id="name5" class="name" maxlength="10" size="10">
+  <input type="text" id="name6" class="name" maxlength="10" size="10">
+
   <canvas id="paperCanvas" width="841.9" height="595.3"></canvas>
 
   <script src="js/vendor/jquery-2.1.1.min.js"></script>
@@ -20,6 +27,6 @@
 
   <script src="js/main.js"></script>
 
-  <script type="text/paperscript" src="js/paperCanvas.js" canvas="paperCanvas">></script>
+  <script type="text/paperscript" src="js/paperCanvas.js" canvas="paperCanvas"></script>
 </body>
 </html>
