--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,14 @@
 
     <button id="save-btn">PLOT IT!</button>
 
+    <p class="instructions">Built by <a href="https://github.com/markdurrant">Mark Durrant</a>
+      (<a href="https://twitter.com/M6_D6">@M6_D6</a>) and
+      <a href="https://github.com/kynan">Florian Rathgeber</a>
+      (<a href="https://twitter.com/frathgeber">@frathgeber</a>) for the
+      <a href="http://fablablondon.org/events/xmas-iot-hackathon-with-resin-io/">
+        Christmas IoT hackathon</a> run by <a href="https://resin.io">resion.io</a>
+      at <a href="http://fablablondon.org">Fablab London</a>.</p>
+
   </div>
 
   <canvas id="paperCanvas" width="841.9" height="595.3"></canvas>
